[OS/2] Fix too big radio buttons in menus.
This is a regression of 05f6e7d3551413495c1b7d47b1d8bdc8285d6004. Closes #252.

--- a/toolkit/themes/os2/global/menu.css
+++ b/toolkit/themes/os2/global/menu.css
@@ -89,8 +89,8 @@ menucaption > .menu-iconic-text {
 }
 
 .menu-iconic-icon {
-  width: 16px;
-  height: 16px;
+  max-width: 16px;
+  max-height: 16px;
   margin-top: -1px !important;
   margin-bottom: 1px !important;
 }
